--- a/packages/theme/src/styles/layout/header.css
+++ b/packages/theme/src/styles/layout/header.css
@@ -6,7 +6,7 @@
     z-index: 1002;
     display: flex;
     align-items: center;
-    box-shadow: 0px -6px 0px rgba(0, 0, 0, 0.1) inset;
+    box-shadow: var(--dnpm-chrome-edge-shadow-bottom);
     background-color: var(--dnpm-chrome-bg);
     padding-bottom: 6px;
 }
